--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -2,23 +2,21 @@ listen=NO
 listen_ipv6=YES
 connect_from_port_20=YES
 
-#>> MISCELANEA
-
+#>> MISCELANEA (Muestra ocultos y no muestra info propietarios)
+force_dot_files=YES
 hide_ids=YES
 
-#>> USUARIOS ANONIMOS
-
+#>> USUARIOS ANONIMOS (Permite anónimos, pueden subir contenido pero no crear carpetas)
 anonymous_enable=YES
 anon_upload_enable=YES
-#anon_mkdir_write_enable=YES
+anon_mkdir_write_enable=NO
 
-#>> USUARIOS LOCALES
-
+#>> USUARIOS LOCALES (Permite usuarios locales, pueden escribir, se enjaulan en sus homes)
 local_enable=YES
-#write_enable=YES
+write_enable=YES
 #local_umask=022
 #local_root=/var/www/$USER
-#chroot_local_user=YES
+chroot_local_user=YES
 
 #>> USUARIOS VIRTUALES
 guest_enable=YES
@@ -34,7 +32,6 @@ use_localtime=YES
 # Make sure PORT transfer connections originate from port 20 (ftp-data).
 #chown_uploads=YES
 #chown_username=whoever
-
 
 #TIMEOUTS
 #idle_session_timeout=600
