--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -1,3 +1,4 @@
+#>> CONEXIONES
 listen=NO
 listen_ipv6=YES
 connect_from_port_20=YES
@@ -5,6 +6,8 @@ connect_from_port_20=YES
 #>> MISCELANEA (Muestra ocultos y no muestra info propietarios)
 force_dot_files=YES
 hide_ids=YES
+utf8_filesystem=YES
+use_localtime=YES
 
 #>> USUARIOS ANONIMOS (Permite anónimos, pueden subir contenido pero no crear carpetas)
 anonymous_enable=YES
@@ -16,20 +19,22 @@ local_enable=YES
 write_enable=YES
 #local_umask=022
 #local_root=/var/www/$USER
+
+#>> OPCIONES DE ENJAULADO
 chroot_local_user=YES
+allow_writeable_chroot=YES
+chroot_list_enable=YES
+chroot_list_file=/etc/vsftpd.chroot_list
 
 #>> USUARIOS VIRTUALES
-guest_enable=YES
-guest_username=vsftpd
+#guest_enable=YES
+#guest_username=vsftpd
 
 #>> LOGGING
-
 xferlog_enable=YES
 #xferlog_file=/var/log/vsftpd.log
 #xferlog_std_format=YES
 
-use_localtime=YES
-# Make sure PORT transfer connections originate from port 20 (ftp-data).
 #chown_uploads=YES
 #chown_username=whoever
 
@@ -40,21 +45,10 @@ use_localtime=YES
 #BANNERS Y MENSAJES
 #ftpd_banner=Welcome to blah FTP service.
 
-# OPCIONES DE ENJAULADO
-allow_writeable_chroot=YES
-#chroot_list_enable=YES
-#chroot_list_file=/etc/vsftpd.chroot_list
-secure_chroot_dir=/var/run/vsftpd/empty
-#
-# This string is the name of the PAM service vsftpd will use.
+#>> Autenticación y SSL
 pam_service_name=vsftpd
-#
-# This option specifies the location of the RSA certificate to use for SSL
-# encrypted connections.
 rsa_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
 rsa_private_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
 ssl_enable=NO
 
-#
-# Uncomment this to indicate that vsftpd use a utf8 filesystem.
-#utf8_filesystem=YES
+
